--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "strict": true,
     "baseUrl": "./",
     "paths": { "@/*": ["src/*"] },
-    "types": ["vite/client", "node"]
+    "types": ["vite/client", "node"],
+    "skipLibCheck": true
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
